--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,3 @@
-<body ng-app="pomodous" ng-include="'client/index.ng.html'">
+<body ng-app="pomodorus" ng-include="'client/index.ng.html'">
 
 </body>
