--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,5 @@
-<body ng-app="pomodorus" ng-include="'client/index.ng.html'">
+<body>
+    <div  ng-app="pomodorus" ng-include="'client/index.ng.html'">
 
+    </div>
 </body>
