--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -1,4 +1,5 @@
 <div ng-controller="taskController " class="listC">
+    <h1>{{times[0].value}}</h1>
 <ul>
     <li ng-repeat="item in list">
         {{item.name}} : {{item.todo}}
