Create Global task Collection !

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -1,7 +1,7 @@
 <div ng-controller="taskController " class="listC">
     <h1>{{times[0].value}}</h1>
 <ul>
-    <li ng-repeat="item in list">
+    <li ng-repeat="item in tasks">
         {{item.name}} : {{item.todo}}
     </li>
 </ul>
