Integrated Facebook login

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -2,12 +2,17 @@
     <h1>{{times[0].value}}</h1>
     <h1> Time is still runnning ? {{isRunning}}</h1>
 <ul>
+    <li> my task is : {{mytask}}</li>
     <li ng-repeat="item in tasks">
         {{item.name}} : {{item.todo}}
     </li>
 </ul>
 
+
+
+    <blaze-template name="loginButtons"></blaze-template>
+
 <input placeholder="What todo" ng-model="todo">
 <input placeholder="name" ng-model="name">
-<button ng-click="join()"> Join Now</button>
+
 </div>
