init user session

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -15,4 +15,5 @@
 <input placeholder="What todo" ng-model="todo">
 <input placeholder="name" ng-model="name">
 
+<button ng-if="isRunning" ng-click="join()">Join now</button>
 </div>
