--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -1,31 +1,40 @@
-<div ng-controller="taskController">
+<div ng-controller="taskController" style="text-align:center">
 
     <div class="Timer">
         <div class="Timer-label">it's time to {{times[0].isRunning ? 'work' : 'relax'}}</div>
         <div class="Timer-countdown">{{times[0].value}}</div>
     </div>
-
-    <h1> Time is still runnning ? {{times[0].isRunning}}</h1>
-    <ul>
+    <ul >
         <li ng-repeat="item in tasks">
             {{item.name}} : {{item.todo}}
         </li>
     </ul>
 
+    <h2 ng-if="currentUser">Hello</h2>
+    <blaze-template name="loginButtons" class="loginBox"></blaze-template>
+    <div ng-show="currentUser">
 
-    <blaze-template name="loginButtons"></blaze-template>
-    <h2>Hello {{user.profile.name}}</h2>
 
-    <div ng-if="times[0].isRunning && !mytask">
-        <input placeholder="What todo" ng-model="todo">
-        <button ng-click="join()">Join now</button>
+
+        <div ng-show="times[0].isRunning && !mytask[0]">
+            <input placeholder="What todo" ng-model="todo">
+            <button ng-click="join()">Join now</button>
+        </div>
+
+        <div ng-show="mytask[0] && times[0].isRunning">
+            Your task is {{mytask[0].todo}}
+        </div>
+
+        <div ng-if="!times[0].isRunning && mytask[0]">
+            <h2>Break time ! so have you done your task ?</h2>
+            <button ng-click="confirm(0)"> YES</button> <button ng-click="confirm(1)"> NO </button>
+        </div>
+        <div ng-if="!times[0].isRunning && !mytask[0]">
+            <h2>Break time ! take some coffee</h2>
+        </div>
+
     </div>
-    <div ng-if="mytask && times[0].isRunning">
-        Your task is  {{mytask[0].todo}}
-    </div>
-    <div ng-if="!times[0].isRunning">
-        Break time !
-    </div>
+
 
 </div>
 
