Add TODO comment for tomorrow ! yay

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -1,3 +1,4 @@
+<!-- TODO : fix spelling -->
 <div ng-controller="taskController" class="listC">
 
     <div class="Timer">
@@ -40,7 +41,7 @@
     </div>
 
     <!-- TODO : get statistic of lasted 25 mins tasks  -->
-    <h2> There are tasks {{lasted.done}} done and {{lasted.fail}} fail in last 25 mins</h2>
+    <h2> There are {{lasted.done}} tasks  done  and {{lasted.fail}}  fail in last 25 mins</h2>
 
 
 </div>
