fix display name problem

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -7,7 +7,7 @@
     </div>
 
     <!-- TODO:Make a scrollable list -->
-    <ul>
+    <ul style="list-style: none">
         <!-- TODO: style li.success and li.fail -->
         <li ng-repeat="item in tasks" ng-class="{'success':item.status == 1,'fail':item.status == 0}">
             <!-- TODO: add Thumb up to each task -->
