Adds a brief message about Pomodoro technique before they sign in.

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -39,7 +39,7 @@
         <div class="Controls-background"></div>
         <div class="Controls-content">
 
-            <div ng-show="!currentUser" class="Controls-message"><strong>Join the fun!</strong> Sign in to boost your productivity.</div>
+            <div ng-show="!currentUser" class="Controls-message">Pomodorus lets you practice the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique">Pomodoro productivity technique</a> with others all around the world. 25 minutes of focused effort, a 5 minute break, and repeat.<br><br><strong>Join the fun!</strong> Sign in to boost your productivity now.</div>
             <blaze-template name="loginButtons" class="Controls-login"></blaze-template>
 
             <div ng-show="currentUser">
