--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,7 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pomodorus</title>
+</head>
 <body>
     <div  ng-app="pomodorus" ng-include="'client/index.ng.html'">
 
