--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -11,6 +11,7 @@
         <!-- TODO: style li.success and li.fail -->
         <li ng-repeat="item in tasks" ng-class="{'success':item.status == 1,'fail':item.status == 0}">
             <!-- TODO: add Thumb up to each task -->
+            <img src="{{getProfileImage(getOwner(item))}}">
             {{getOwner(item) | displayName}} : {{item.title}} / {{item.status ? 'This job s done':'Fail'}}
         </li>
     </ul>
